doc/Syntax.bnf
prog 
    : stmt*
    ;
stmt
    : decl_stmt | expr_stmt | null_stmt
    ;
decl_stmt
    : 'int' identifier ('=' expr)? (',' identifier ('=' expr)?)* ';' 
    ;
expr_stmt
    : expr ';'
    ;
null_stmt
    : ';'
    ;
expr  
    : addsub_expr
    | assign_expr
    ;
assign_expr
    : identifier '=' expr 
    ;
addsub_expr
    : muldiv_expr ['+' | '-'] muldiv_expr
    ;
muldiv_expr
    : primary_expr ['*' | '/'] primary_expr
    ;
primary_expr 
    : number 
    | '(' expr ')'
    | identifier
    ;
identifier
    : [a-zA-Z_][a-zA-Z0-9_]*
number
    : [0-9]+
    ;
